added three section elements to the index.html file

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <header>
       <h1>Library</h1>
     </header>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
   </body>
 </html>
