wrote initial outline for html file with notes for interactivity and other possible html pages

--- a/index.html
+++ b/index.html
@@ -11,9 +11,97 @@
       <h1>Library</h1>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section id="nav-bar">
+        <ul>
+          <li id="search"></li>
+          <li id="home"></li>
+          <li id="my-list"></li>
+        </ul>
+      </section>
+      <section>
+        <p>Welcome Message</p>
+        <button>Get Started</button>
+        <!--This button will initiate the search and lead to where users can inout the criteria they want to search by-->
+      </section>
+
+      <section>
+        <p>Click to know more!</p>
+        <button>Click Here</button>
+        <!--This button will lead to a separate html file that will explain how to use the website, with pictures, diagrams, steps, add button to go back to home-->
+      </section>
+
+      <section>
+        <div id="search-form"></div>
+        <form></form>
+          <input id="author">
+          <input id="title">
+          <input id="language">
+          <input id="page-count">
+          <input id="genre">
+          <!--<input id="keyword"> either work on when done or it will be a future development-->
+          <button>Search</button>
+        </form>
+        </div>
+        <div id="results">
+          <h2>results</h2>
+            <div>
+              <a>Result</a>
+              <!--Image of book cover-->
+              <button>Inspect</button>
+            </div> <!--this can be changed later-->
+        </div>
+      </section>
+
+      <!--New HTML File
+         <header>
+      <h1>Library</h1>
+    </header>
+    <main>
+      <section id="nav-bar">
+        <ul>
+          <li id="search"></li>
+          <li id="home"></li>
+          <li id="my-list"></li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Book that got clicked on</h2>
+        <section>
+          <info about book>
+          <image of book cover>
+          <avg rating><place button here that takes user to list of reviews><will need to add back button>
+          <add to list button>
+        </section>-->
+
+
+      <!--New HTML File
+         <header>
+      <h1>Library</h1>
+    </header>
+    <main>
+      <section id="nav-bar">
+        <ul>
+          <li id="search"></li>
+          <li id="home"></li>
+          <li id="my-list"></li>
+        </ul>
+      </section>
+
+      <section>
+        <h1>User's Book List</h1>  
+        <ul>
+          <li>
+            <a>Title of book</a>
+            <img of cover>
+            <button to remove from list>
+          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section--><!--this list will be saved and retreived from user's local storage-->
+
     </main>
   </body>
 </html>
