added assets, css and js directories with respective files and made new html file

--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
           <li id="search"></li>
           <li id="home"></li>
           <li id="my-list"></li>
+          <li id="info"></li>
         </ul>
       </section>
       <section>
         <p>Welcome Message</p>
         <button>Get Started</button>
         <!--This button will initiate the search and lead to where users can inout the criteria they want to search by-->
-      </section>
-
-      <section>
         <p>Click to know more!</p>
         <button>Click Here</button>
         <!--This button will lead to a separate html file that will explain how to use the website, with pictures, diagrams, steps, add button to go back to home-->
@@ -51,29 +49,6 @@
             </div> <!--this can be changed later-->
         </div>
       </section>
-
-      <!--New HTML File
-         <header>
-      <h1>Library</h1>
-    </header>
-    <main>
-      <section id="nav-bar">
-        <ul>
-          <li id="search"></li>
-          <li id="home"></li>
-          <li id="my-list"></li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Book that got clicked on</h2>
-        <section>
-          <info about book>
-          <image of book cover>
-          <avg rating><place button here that takes user to list of reviews><will need to add back button>
-          <add to list button>
-        </section>-->
-
 
       <!--New HTML File
          <header>
