--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Library Name</title>
   </head>
 
   <body>
     <header>
       <h1>Library</h1>
+      <aside id="nav">
+        
+          <div>
+            <a href="#">Home</a>
+            <a href="#">Search</a>
+            <a href="#">My List</a>
+            <a href="#">App Info</a>
+          </div>
+
+      </aside>
     </header>
     <main>
-      <section id="nav-bar">
-        <ul>
-          <li id="search"></li>
-          <li id="home"></li>
-          <li id="my-list"></li>
-          <li id="info"></li>
-        </ul>
-      </section>
       <section>
         <p>Welcome Message</p>
         <button>Get Started</button>
@@ -28,28 +32,35 @@
         <!--This button will lead to a separate html file that will explain how to use the website, with pictures, diagrams, steps, add button to go back to home-->
       </section>
 
-      <section>
-        <div id="search-form"></div>
-        <form></form>
-          <input id="author">
-          <input id="title">
-          <input id="language">
-          <input id="page-count">
-          <input id="genre">
-          <!--<input id="keyword"> either work on when done or it will be a future development-->
-          <button>Search</button>
-        </form>
-        </div>
-        <div id="results">
-          <h2>results</h2>
-            <div>
-              <a>Result</a>
-              <!--Image of book cover-->
-              <button>Inspect</button>
-            </div> <!--this can be changed later-->
-        </div>
+      <section class="container row">
+          <div class="col-4 card" id="search-form">
+            <h2 class="card-header">Search Criteria</h2>
+            <form class="card-body">
+              <label for="author">Author</label><br>
+              <input type="text" id="author" name="author"><br>
+              <label for="title">Title</label><br>
+              <input type="text" id="title" name="title"><br>
+              <label for="language">Language</label><br>
+              <input id="language"><br>
+              <label for="page-count" id="page-count" name="page-count">Page Count</label><br>
+              <input id="page-count"><br>
+              <label for="genre" id="genre" name="genre">Genre</label><br>
+              <input id="genre"><br>
+                <button type="submit">Search</button>
+            </form>
+          </div>
+
+          <div class="col-8" id="results">
+            <h2>results</h2>
+              <div>
+                <a>Result</a>
+                <!--Image of book cover-->
+                <button>Inspect</button>
+              </div> <!--this can be changed later-->
+          </div>
       </section>
 
     </main>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
