--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 
   <body>
     <header>
-      <h1>Library</h1>
-      <aside id="nav">
-        
-          <div>
-            <a href="#">Home</a>
-            <a href="#">Search</a>
-            <a href="#">My List</a>
-            <a href="#">App Info</a>
+      <h1 class="library-heading">BookQuesters</h1>
+      <nav class="navbar" style="background-color: lightgray">
+        <div class="container-fluid">
+          <div class="navbar-links">
+            <a href="#home">Home</a>
+            <a href="#search">Search</a>
+            <a href="#mylist">My List</a>
+            <a href="#aboutus">About Us</a>
           </div>
-
-      </aside>
+        </div>
+      </nav>
     </header>
     <main>
-      <section>
+      <section id="welcome" style="display: block">
         <p>Welcome Message</p>
-        <button>Get Started</button>
+        <button id="start-btn">Get Started</button>
         <!--This button will initiate the search and lead to where users can inout the criteria they want to search by-->
         <p>Click to know more!</p>
-        <button>Click Here</button>
-        <!--This button will lead to a separate html file that will explain how to use the website, with pictures, diagrams, steps, add button to go back to home-->
+        <button id="about-btn">
+          <a href="./about.html">Click to know more!</a>
+        </button>
+        <!--This button links to an about the app webpage that describes how to use the app and ways we want to develope it in the future-->
       </section>
 
       <section class="container row">
