--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <nav class="navbar" style="background-color: lightgray">
         <div class="container-fluid">
           <div class="navbar-links">
-            <a href="#home">Home</a>
-            <a href="#search">Search</a>
-            <a href="#mylist">My List</a>
-            <a href="#aboutus">About Us</a>
+            <a href="./index.html">Home</a>
+            <a id='search-link' href="./search.html">Search</a>
+            <a href="./list.html">My List</a>
+            <a href="./about.html">About Us</a>
           </div>
         </div>
       </nav>
@@ -30,44 +30,13 @@
     <main>
       <section id="welcome" style="display: block">
         <p>Welcome Message</p>
-        <button id="start-btn">Get Started</button>
+        <button id="start-btn" href="./search.html">Get Started</button>
         <!--This button will initiate the search and lead to where users can inout the criteria they want to search by-->
         <p>Click to know more!</p>
         <button id="about-btn">
           <a href="./about.html">Click to know more!</a>
         </button>
         <!--This button links to an about the app webpage that describes how to use the app and ways we want to develope it in the future-->
-      </section>
-
-      <section class="container row">
-        <div class="col-4 card" id="search-form">
-          <h2 class="card-header">Search Criteria</h2>
-          <form class="card-body">
-            <label for="author">Author</label><br />
-            <input type="text" id="author" name="author" /><br />
-            <label for="title">Title</label><br />
-            <input type="text" id="title" name="title" /><br />
-            <label for="language">Language</label><br />
-            <input id="language" /><br />
-            <label for="page-count" id="page-count" name="page-count"
-              >Page Count</label
-            ><br />
-            <input id="page-count" /><br />
-            <label for="genre" id="genre" name="genre">Genre</label><br />
-            <input id="genre" /><br />
-            <button type="submit">Search</button>
-          </form>
-        </div>
-
-        <div class="col-8" id="results">
-          <h2>results</h2>
-          <div>
-            <a>Result</a>
-            <!--Image of book cover-->
-            <button>Inspect</button>
-          </div>
-          <!--this can be changed later-->
-        </div>
       </section>
     </main>
     <script src="./assets/js/script.js"></script>
