--- a/list.html
+++ b/list.html
@@ -3,21 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Library Name</title>
   </head>
 
   <body>
     <header>
-        <h1>Library</h1>
-    </header>
+        <h1 class="library-heading">BookQuesters</h1>
+        <nav class="navbar" style="background-color: lightgray">
+          <div class="container-fluid">
+            <div class="navbar-links">
+              <a href="./index.html">Home</a>
+              <a id='search-link' href="./search.html">Search</a>
+              <a href="./list.html">My List</a>
+              <a href="./about.html">About Us</a>
+            </div>
+          </div>
+        </nav>
+      </header>
     <main>
-        <section id="nav-bar">
-            <ul>
-                <li id="search"></li>
-                <li id="home"></li>
-                <li id="my-list"></li>
-            </ul>
-        </section>
 
         <section>
             <h1>User's Book List</h1>  
@@ -33,6 +43,7 @@
             </ul>
         </section><!--this list will be saved and retreived from user's local storage-->
     </main>
+    <script src="./assets/js/script.js"></script>
   </body>
 
 </html>
