added new js files, updated some html

--- a/search.html
+++ b/search.html
@@ -60,6 +60,6 @@
         </div>
       </section>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/search.js"></script>
   </body>
 </html>
