added js to print list of ten random books using open library api and added html elements for this purpose

--- a/index.html
+++ b/index.html
@@ -30,13 +30,21 @@
     <main>
       <section id="welcome" style="display: block">
         <p>Welcome Message</p>
-        <button id="start-btn" href="./search.html">Get Started</button>
+        <button id="start-btn">
+          <a>Get Started</a>
+        </button>
         <!--This button will initiate the search and lead to where users can inout the criteria they want to search by-->
         <p>Click to know more!</p>
         <button id="about-btn">
-          <a href="./about.html">Click to know more!</a>
+          <a>Click to know more!</a>
         </button>
         <!--This button links to an about the app webpage that describes how to use the app and ways we want to develope it in the future-->
+      </section>
+      <section id="random-list">
+        <button id="random-button">
+          <a>Random Books!</a>
+        </button>
+        <!--This button will randomly generate a list of books for users who want to try their chances with a random generator instead of making a more specific search-->
       </section>
     </main>
     <script src="./assets/js/script.js"></script>
