refactored search.js file and wrote functions to generate api search query and return search results in console

--- a/search.html
+++ b/search.html
@@ -39,11 +39,7 @@
             <input type="text" id="title" name="title" /><br />
             <label for="language">Language</label><br />
             <input id="language" /><br />
-            <label for="page-count" id="page-count" name="page-count"
-              >Page Count</label
-            ><br />
-            <input id="page-count" /><br />
-            <label for="genre" id="genre" name="genre">Genre</label><br />
+            <label for="genre" name="genre">Genre</label><br />
             <input id="genre" /><br />
             <button type="submit">Search</button>
           </form>
@@ -52,9 +48,9 @@
         <div class="col-8" id="results">
           <h2>results</h2>
           <div>
-            <a>Result</a>
-            <!--Image of book cover-->
-            <button>Inspect</button>
+            <!-- <a>Result</a>
+              Image of book cover
+            <button>Inspect</button>-->
           </div>
           <!--this can be changed later-->
         </div>
