debugged search.js display search list function and saved book object to local storage to get for info.js file

--- a/search.html
+++ b/search.html
@@ -47,12 +47,9 @@
 
         <div class="col-8" id="results">
           <h2>results</h2>
-          <div>
-            <!-- <a>Result</a>
-              Image of book cover
-            <button>Inspect</button>-->
+          <div id="result-entrys">
+            <!--This is where book results show up-->
           </div>
-          <!--this can be changed later-->
         </div>
       </section>
     </main>
