debugged info.js saving boks to local storage and made list js file and added functionality to display list and remove items

--- a/list.html
+++ b/list.html
@@ -30,20 +30,13 @@
     <main>
 
         <section>
-            <h1>User's Book List</h1>  
-            <ul>
-                <li>
-                    <a>Title of book</a>
-                    <img of cover>
-                    <button to remove from list>
-                </li>
-                <li></li>
-                <li></li>
-                <li></li>
+            <h1>My Book List</h1>  
+            <ul id="my-list">
+              <!--this list will be saved and retreived from user's local storage-->
             </ul>
-        </section><!--this list will be saved and retreived from user's local storage-->
+        </section>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/list.js"></script>
   </body>
 
 </html>
