added navbar to about us

--- a/about.html
+++ b/about.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./dist/output.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Library Name</title>
   </head>
 
   <body>
     <header>
-      <h1>How to use this Application!</h1>
+      <h1 class="library-heading">BookQuesters</h1>
+      <nav class="navbar" style="background-color: lightgray">
+        <div class="container-fluid">
+          <div class="navbar-links">
+            <a href="./index.html">Home</a>
+            <a id="search-link" href="./search.html">Search</a>
+            <a href="./list.html">My List</a>
+            <a href="./about.html">About Us</a>
+          </div>
+        </div>
+      </nav>
+      <h2>How to use this Application!</h2>
       <button>
         <a href="./index.html">Return Home</a>
       </button>
