updated about html file with information about the site and corrected a misspelled word on readme

--- a/about.html
+++ b/about.html
@@ -35,9 +35,13 @@
     </header>
     <main>
       <p>
-        Diagrams, pictures and text will go here describing how to use this web
-        application and what it can do-possibly also what we want it to do in
-        the future!
+        BookQuesters is an online platform that offers the best of both worlds for book lovers. Whether you want to search for a specific book or let the internet decide, BookQuesters has a solution for you! 
+        <br>
+        With a simple click, discover a world of surprises through our "Random Book" feature, which introduces you to books from various genres, authors, and cultures. Immerse yourself in captivating stories you might have never stumbled upon otherwise!
+        <br>
+        BookQuesters also empowers you to take control of your reading journey. Easily search and explore a vast library of books using our user-friendly search function, where you can find your favorite authors, titles, and genres. 
+        <br>
+        The site also has a convenient "Add to list" feature, allowing you to create a personalized collection of books you'd like to explore when the time is right.
       </p>
     </main>
   </body>
