--- a/list.html
+++ b/list.html
@@ -10,34 +10,36 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Library Name</title>
   </head>
 
   <body>
     <header>
-        <h1 class="library-heading">BookQuesters</h1>
-        <nav class="navbar" style="background-color: lightgray">
-          <div class="container-fluid">
-            <div class="navbar-links">
-              <a href="./index.html">Home</a>
-              <a id='search-link' href="./search.html">Search</a>
-              <a href="./list.html">My List</a>
-              <a href="./about.html">About Us</a>
-            </div>
+      <h1 class="library-heading">BookQuesters</h1>
+      <nav class="navbar" style="background-color: lightgray">
+        <div class="container-fluid">
+          <div class="navbar-links">
+            <a href="./index.html">Home</a>
+            <a id="search-link" href="./search.html">Search</a>
+            <a href="./list.html">My List</a>
+            <a href="./about.html">About Us</a>
           </div>
-        </nav>
-      </header>
+        </div>
+      </nav>
+    </header>
     <main>
-
-        <section>
-            <h1>My Book List</h1>  
-            <ul id="my-list">
-              <!--this list will be saved and retreived from user's local storage-->
-            </ul>
-        </section>
+      <section>
+        <h1>My Book List</h1>
+        <ul id="my-list">
+          <!--this list will be saved and retreived from user's local storage-->
+        </ul>
+      </section>
     </main>
     <script src="./assets/js/list.js"></script>
   </body>
-
 </html>
