--- a/list.html
+++ b/list.html
@@ -15,13 +15,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Library Name</title>
+    <title>BookQuesters</title>
   </head>
 
   <body>
     <header>
-      <h1 class="library-heading">BookQuesters</h1>
-      <nav class="navbar" style="background-color: lightgray">
+      <h1 class="text-5xl font-extrabold px-11 py-11"><span
+        class="bg-clip-text text-transparent bg-gradient-to-r from-blue-700 to-green-700">BookQuesters</span></h1>
+      <nav class="navbar" style="background-color: #0369A1">
         <div class="container-fluid">
           <div class="navbar-links">
             <a href="./index.html">Home</a>
@@ -33,11 +34,13 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h1>My Book List</h1>
-        <ul id="my-list">
-          <!--this list will be saved and retreived from user's local storage-->
-        </ul>
+      <section >
+        <h1 class="text-4xl m-10">My Book List</h1>
+        <div class="flex justify-left">
+          <ul id="my-list" class="list-none ml-10">
+            <!--this list will be saved and retreived from user's local storage-->
+          </ul>
+        </div>
       </section>
     </main>
     <script src="./assets/js/list.js"></script>
