--- a/about.html
+++ b/about.html
@@ -15,13 +15,19 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Library Name</title>
+    <title>BookQuesters</title>
   </head>
 
   <body>
     <header>
-      <h1 class="library-heading">BookQuesters</h1>
-      <nav class="navbar" style="background-color: lightgray">
+      <h1 class="text-5xl font-extrabold px-11 py-11">
+        <span
+          class="bg-clip-text text-transparent bg-gradient-to-r from-blue-700 to-green-700"
+        >
+          BookQuesters
+        </span>
+      </h1>
+      <nav class="navbar" style="background-color: #0369a1">
         <div class="container-fluid">
           <div class="navbar-links">
             <a href="./index.html">Home</a>
@@ -31,22 +37,35 @@
           </div>
         </div>
       </nav>
-      <h2>How to use this Application!</h2>
-      <button>
+      <h2 id="about-h2">How to use this Application!</h2>
+    </header>
+    <main id="about-bq">
+      <p>
+        BookQuesters is an online platform that offers the best of both worlds
+        for book lovers. Whether you want to search for a specific book or let
+        the internet decide, BookQuesters has a solution for you!
+        <br />
+        With a simple click, discover a world of surprises through our "Random
+        Book" feature, which introduces you to books from various genres,
+        authors, and cultures. Immerse yourself in captivating stories you might
+        have never stumbled upon otherwise!
+        <br />
+        BookQuesters also empowers you to take control of your reading journey.
+        Easily search and explore a vast library of books using our
+        user-friendly search function, where you can find your favorite authors,
+        titles, and genres.
+        <br />
+        The site also has a convenient "Add to list" feature, allowing you to
+        create a personalized collection of books you'd like to explore when the
+        time is right.
+      </p>
+      <!--This button returns to main welcome page-->
+      <button
+        id="return-btn"
+        class="bg-blue-700 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+      >
         <a href="./index.html">Return Home</a>
       </button>
-      <!--This button returns to main welcome page-->
-    </header>
-    <main>
-      <p>
-        BookQuesters is an online platform that offers the best of both worlds for book lovers. Whether you want to search for a specific book or let the internet decide, BookQuesters has a solution for you! 
-        <br>
-        With a simple click, discover a world of surprises through our "Random Book" feature, which introduces you to books from various genres, authors, and cultures. Immerse yourself in captivating stories you might have never stumbled upon otherwise!
-        <br>
-        BookQuesters also empowers you to take control of your reading journey. Easily search and explore a vast library of books using our user-friendly search function, where you can find your favorite authors, titles, and genres. 
-        <br>
-        The site also has a convenient "Add to list" feature, allowing you to create a personalized collection of books you'd like to explore when the time is right.
-      </p>
     </main>
   </body>
 </html>
