--- a/search.html
+++ b/search.html
@@ -9,8 +9,9 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Library Name</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <title>BookQuesters</title>
   </head>
 
   <body>
@@ -46,7 +47,7 @@
         </div>
 
         <div class="col-8" id="results">
-          <h2>results</h2>
+          <h2>Results:</h2>
           <div id="result-entrys">
             <!--This is where book results show up-->
           </div>
