--- a/info.html
+++ b/info.html
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./dist/output.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Library Name</title>
-  </head>
 
-  <body>
-    <header>
-      <h1 class="library-heading">BookQuesters</h1>
-      <nav class="navbar" style="background-color: lightgray">
-        <div class="container-fluid">
-          <div class="navbar-links">
-            <a href="./index.html">Home</a>
-            <a id='search-link' href="./search.html">Search</a>
-            <a href="./list.html">My List</a>
-            <a href="./about.html">About Us</a>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="./dist/output.css" rel="stylesheet" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Library Name</title>
+</head>
+
+<body class="bg-gray-100">
+  <header>
+    <h1 class="text-5xl font-extrabold px-11 py-11">
+      <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-700 to-green-700">
+        BookQuesters
+      </span>
+    </h1>
+    <nav class="navbar" style="background-color: #0369A1">
+      <div class="container-fluid">
+        <div class="navbar-links">
+          <a href="./index.html">Home</a>
+          <a id='search-link' href="./search.html">Search</a>
+          <a href="./list.html">My List</a>
+          <a href="./about.html">About Us</a>
         </div>
-      </nav>
-    </header>
-    
-    <main>
+      </div>
+    </nav>
+  </header>
 
-      <section id="book-display">
-        <h2 id="title-display"></h2>
-        <h4 id="author-display"></h4>
-        <div>
-          <section>
-          <div id="description"></div>
-          <div id="language"></div>
-          <div id="category"></div>
-          <div id="page-num"></div>
-          <div id="rating"></div>
+  <main class="container mx-auto py-8 px-4 md:py-16">
+    <section id="book-display" class="bg-white shadow-md rounded-md p-4">
+      <h2 id="title-display" class="text-2xl font-bold mb-2"></h2>
+      <h4 id="author-display" class="text-lg text-gray-700 mb-4"></h4>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <section>
+          <div id="description" class="text-gray-700"></div>
+          <div id="language" class="text-gray-700"></div>
+          <div id="category" class="text-gray-700"></div>
+          <div id="page-num" class="text-gray-700"></div>
+          <div id="rating" class="text-gray-700"></div>
         </section>
-        <section id="book-cover"></section>
-        </div>
-        <button id="add">Add to My List</button>
+        <section id="book-cover" class="flex justify-center items-center">
+          <!-- Adjust the style attribute to make the image even bigger -->
+          <img src="" alt="Book Cover" style="max-width: 500px; max-height: 600px; width: 100%; height: auto;" />
+        </section>
+      </div>
+      <button id="add" class="bg-blue-700 hover:bg-blue-800 text-white font-bold py-2 px-4 rounded mt-4">
+        Add to My List
+      </button>
+    </section>
+  </main>
+  <script src="./assets/js/info.js"></script>
+</body>
 
-    </main>
-    <script src="./assets/js/info.js"></script>
-
-    </body>
-
-  </html>
+</html>
