--- a/search.html
+++ b/search.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./dist/output.css" rel="stylesheet" />
-    <link href="./dist/output.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>BookQuesters</title>
   </head>
 
   <body>
     <header>
-      <h1 class="library-heading">BookQuesters</h1>
-      <nav class="navbar" style="background-color: lightgray">
+      <h1 class="text-5xl font-extrabold px-11 py-11">
+        <span
+          class="bg-clip-text text-transparent bg-gradient-to-r from-blue-700 to-green-700"
+        >
+          BookQuesters
+        </span>
+      </h1>
+      <nav class="navbar" style="background-color: #0369a1">
         <div class="container-fluid">
           <div class="navbar-links">
             <a href="./index.html">Home</a>
-            <a id="search-link" href="./search.html">Search</a>
             <a id="search-link" href="./search.html">Search</a>
             <a href="./list.html">My List</a>
             <a href="./about.html">About Us</a>
