--- a/info.html
+++ b/info.html
@@ -38,8 +38,8 @@
     </nav>
   </header>
 
-  <main class="container mx-auto py-8 px-4 md:py-16">
-    <section id="book-display" class="bg-white shadow-md rounded-md p-4">
+  <main class="container">
+    <section id="book-display" class="bg-white w-100 justify-center shadow-md rounded-md my-4 p-4">
       <h2 id="title-display" class="text-2xl font-bold mb-2"></h2>
       <h4 id="author-display" class="text-lg text-gray-700 mb-4"></h4>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
