--- a/search.html
+++ b/search.html
@@ -39,8 +39,9 @@
       </nav>
     </header>
     <main>
-      <section class="container row">
+      <section class="container row flex-row">
         <div class="col-4 card" id="search-form">
+          <!--This is the form used to search for books with provided categories-->
           <h2 class="card-header">Search Criteria</h2>
           <form class="card-body">
             <label for="author">Author</label><br />
@@ -56,9 +57,10 @@
         </div>
 
         <div class="col-8" id="results">
-          <h2>Results:</h2>
+          <h2 class="text-2xl">Results:</h2>
           <div id="result-entrys">
             <!--This is where book results show up-->
+          </div>
           </div>
         </div>
       </section>
