edited page title in head element

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- <link href="/dist/output.css" rel="stylesheet" /> -->
-    <title>Library Name</title>
+    <title>BookQuesters</title>
   </head>
 
   <body>
