--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>Library Name</title>
+  <title>BookQuesters</title>
 </head>
 
 <body class="bg-gray-100">
