re added card class

--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section class="container row flex-row">
-        <div class="col-4" id="search-form">
+        <div class="col-4 card" id="search-form">
           <!--This is the form used to search for books with provided categories-->
           <h2 class="card-header">Search Criteria</h2>
           <form class="card-body">
